--- a/CCS-Uploader/Controllers/MainWindow.xib
+++ b/CCS-Uploader/Controllers/MainWindow.xib
@@ -122,7 +122,7 @@
                                                             </tableCellView>
                                                         </prototypeCellViews>
                                                     </tableColumn>
-                                                    <tableColumn identifier="Thumbs" width="101.45703125" minWidth="10" maxWidth="3.4028234663852886e+38" id="EhI-au-diJ">
+                                                    <tableColumn identifier="Thumbs" width="90" minWidth="10" maxWidth="3.4028234663852886e+38" id="EhI-au-diJ">
                                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Thumbs">
                                                             <font key="font" metaFont="smallSystem"/>
                                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -133,11 +133,11 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <tableCellView id="oKq-d3-qM2">
-                                                                <rect key="frame" x="464" y="1" width="101" height="17"/>
+                                                                <rect key="frame" x="464" y="1" width="90" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <subviews>
                                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rEv-ak-sY2">
-                                                                        <rect key="frame" x="0.0" y="-1" width="101" height="17"/>
+                                                                        <rect key="frame" x="0.0" y="-1" width="90" height="17"/>
                                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="v9m-xc-fpF">
                                                                             <font key="font" size="11" name="LucidaGrande"/>
@@ -152,7 +152,7 @@
                                                             </tableCellView>
                                                         </prototypeCellViews>
                                                     </tableColumn>
-                                                    <tableColumn identifier="Fullsize" width="101.20703125" minWidth="10" maxWidth="3.4028234663852886e+38" id="Smx-fA-ByM">
+                                                    <tableColumn identifier="Fullsize" width="90" minWidth="10" maxWidth="3.4028234663852886e+38" id="Smx-fA-ByM">
                                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Full-size">
                                                             <font key="font" metaFont="smallSystem"/>
                                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -163,11 +163,11 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <tableCellView id="FNo-jx-GWg">
-                                                                <rect key="frame" x="568" y="1" width="101" height="17"/>
+                                                                <rect key="frame" x="557" y="1" width="90" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <subviews>
                                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qEM-Uk-681">
-                                                                        <rect key="frame" x="0.0" y="-1" width="101" height="17"/>
+                                                                        <rect key="frame" x="0.0" y="-1" width="90" height="17"/>
                                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="nNI-XZ-tPv">
                                                                             <font key="font" size="11" name="LucidaGrande"/>
@@ -196,7 +196,7 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <tableCellView id="vb5-9P-99w">
-                                                                <rect key="frame" x="672" y="1" width="117" height="17"/>
+                                                                <rect key="frame" x="650" y="1" width="117" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <subviews>
                                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cRO-gG-2GG">
@@ -230,7 +230,7 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <customView id="9PM-Ck-ibN">
-                                                                <rect key="frame" x="792" y="1" width="18" height="21"/>
+                                                                <rect key="frame" x="770" y="1" width="18" height="21"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <subviews>
                                                                     <progressIndicator horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" maxValue="100" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="KOp-N1-4X6">
@@ -241,7 +241,7 @@
                                                             </customView>
                                                         </prototypeCellViews>
                                                     </tableColumn>
-                                                    <tableColumn width="57.16015625" minWidth="10" maxWidth="3.4028234663852886e+38" id="Fno-Ii-m6x">
+                                                    <tableColumn identifier="Stop" width="57.16015625" minWidth="10" maxWidth="3.4028234663852886e+38" id="Fno-Ii-m6x">
                                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                             <font key="font" metaFont="smallSystem"/>
                                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -255,16 +255,19 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <button verticalHuggingPriority="750" id="J23-YR-5ef">
-                                                                <rect key="frame" x="813" y="1" width="57" height="15"/>
+                                                                <rect key="frame" x="791" y="1" width="57" height="15"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <buttonCell key="cell" type="inline" title="Stop" bezelStyle="inline" alignment="center" borderStyle="border" inset="2" id="awf-Ia-cjf">
                                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                                     <font key="font" metaFont="smallSystemBold"/>
+                                                                    <connections>
+                                                                        <action selector="stopOrResumeTransfer:" target="-2" id="6PW-3a-v1R"/>
+                                                                    </connections>
                                                                 </buttonCell>
                                                             </button>
                                                         </prototypeCellViews>
                                                     </tableColumn>
-                                                    <tableColumn width="57" minWidth="10" maxWidth="3.4028234663852886e+38" id="VRf-Tt-DdH">
+                                                    <tableColumn identifier="Delete" width="57" minWidth="10" maxWidth="3.4028234663852886e+38" id="VRf-Tt-DdH">
                                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                             <font key="font" metaFont="smallSystem"/>
                                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -278,11 +281,14 @@
                                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                         <prototypeCellViews>
                                                             <button verticalHuggingPriority="750" id="ZkG-5Y-Q7T">
-                                                                <rect key="frame" x="873" y="1" width="57" height="15"/>
+                                                                <rect key="frame" x="851" y="1" width="57" height="15"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                                <buttonCell key="cell" type="inline" title="Delete" bezelStyle="inline" alignment="center" borderStyle="border" inset="2" id="IVr-Sn-1Qw">
+                                                                <buttonCell key="cell" type="inline" title="Remove" bezelStyle="inline" alignment="center" borderStyle="border" inset="2" id="IVr-Sn-1Qw">
                                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                                     <font key="font" metaFont="smallSystemBold"/>
+                                                                    <connections>
+                                                                        <action selector="removeTransfer:" target="-2" id="GaO-kJ-HnB"/>
+                                                                    </connections>
                                                                 </buttonCell>
                                                             </button>
                                                         </prototypeCellViews>
