--- a/CCS-Uploader/Controllers/Wizard/ScheduleView.xib
+++ b/CCS-Uploader/Controllers/Wizard/ScheduleView.xib
@@ -134,6 +134,7 @@
 												<string key="NSContents">Selected images for this event</string>
 												<reference key="NSSupport" ref="4379690"/>
 												<reference key="NSControlView" ref="907044084"/>
+												<int key="NSTag">2</int>
 												<int key="NSButtonFlags">1211912448</int>
 												<int key="NSButtonFlags2">0</int>
 												<object class="NSImage" key="NSNormalImage">
@@ -241,6 +242,7 @@ y7bMNcy1zTXNtc42zrbPN8+40DnQutE80b7SP9LB00TTxtRJ1MvVTtXR1lXW2Ndc1+DYZNjo2WzZ8dp2
 												<string key="NSContents">Missing Images</string>
 												<reference key="NSSupport" ref="4379690"/>
 												<reference key="NSControlView" ref="907044084"/>
+												<int key="NSTag">3</int>
 												<int key="NSButtonFlags">1211912448</int>
 												<int key="NSButtonFlags2">0</int>
 												<reference key="NSAlternateImage" ref="969439262"/>
@@ -445,6 +447,7 @@ y7bMNcy1zTXNtc42zrbPN8+40DnQutE80b7SP9LB00TTxtRJ1MvVTtXR1lXW2Ndc1+DYZNjo2WzZ8dp2
 												<string key="NSContents">Later:</string>
 												<reference key="NSSupport" ref="4379690"/>
 												<reference key="NSControlView" ref="207911774"/>
+												<int key="NSTag">2</int>
 												<int key="NSButtonFlags">1211912448</int>
 												<int key="NSButtonFlags2">0</int>
 												<object class="NSImage" key="NSNormalImage">
@@ -549,6 +552,7 @@ y7bMNcy1zTXNtc42zrbPN8+40DnQutE80b7SP9LB00TTxtRJ1MvVTtXR1lXW2Ndc1+DYZNjo2WzZ8dp2
 												<string key="NSContents">Not Now</string>
 												<reference key="NSSupport" ref="4379690"/>
 												<reference key="NSControlView" ref="207911774"/>
+												<int key="NSTag">3</int>
 												<int key="NSButtonFlags">1211912448</int>
 												<int key="NSButtonFlags2">0</int>
 												<reference key="NSAlternateImage" ref="969439262"/>
@@ -678,7 +682,7 @@ y7bMNcy1zTXNtc42zrbPN8+40DnQutE80b7SP9LB00TTxtRJ1MvVTtXR1lXW2Ndc1+DYZNjo2WzZ8dp2
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSDatePickerCell" key="NSCell" id="501541260">
-											<int key="NSCellFlags">71303168</int>
+											<int key="NSCellFlags">608174080</int>
 											<int key="NSCellFlags2">0</int>
 											<object class="NSCalendarDate" key="NSContents">
 												<double key="NS.time">-595929600</double>
@@ -794,6 +798,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 												<string key="NSContents">Later:</string>
 												<reference key="NSSupport" ref="4379690"/>
 												<reference key="NSControlView" ref="58561905"/>
+												<int key="NSTag">2</int>
 												<int key="NSButtonFlags">1211912448</int>
 												<int key="NSButtonFlags2">0</int>
 												<object class="NSImage" key="NSNormalImage">
@@ -898,6 +903,7 @@ y7bMNcy1zTXNtc42zrbPN8+40DnQutE80b7SP9LB00TTxtRJ1MvVTtXR1lXW2Ndc1+DYZNjo2WzZ8dp2
 												<string key="NSContents">Not Now</string>
 												<reference key="NSSupport" ref="4379690"/>
 												<reference key="NSControlView" ref="58561905"/>
+												<int key="NSTag">3</int>
 												<int key="NSButtonFlags">1211912448</int>
 												<int key="NSButtonFlags2">0</int>
 												<reference key="NSAlternateImage" ref="969439262"/>
@@ -1027,7 +1033,7 @@ y7bMNcy1zTXNtc42zrbPN8+40DnQutE80b7SP9LB00TTxtRJ1MvVTtXR1lXW2Ndc1+DYZNjo2WzZ8dp2
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSDatePickerCell" key="NSCell" id="956683499">
-											<int key="NSCellFlags">71303168</int>
+											<int key="NSCellFlags">608174080</int>
 											<int key="NSCellFlags2">0</int>
 											<object class="NSCalendarDate" key="NSContents">
 												<double key="NS.time">-595929600</double>
@@ -1147,6 +1153,62 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 						<reference key="destination" ref="1005"/>
 					</object>
 					<int key="connectionID">2</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">dpScheduleFullsize</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="214395020"/>
+					</object>
+					<int key="connectionID">227</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">dpScheduleThumbs</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="307257557"/>
+					</object>
+					<int key="connectionID">228</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">scheduleFullsizeRadios</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="207911774"/>
+					</object>
+					<int key="connectionID">229</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">scheduleThumbsRadios</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="58561905"/>
+					</object>
+					<int key="connectionID">230</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">whichImagesRadios</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="907044084"/>
+					</object>
+					<int key="connectionID">231</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">scheduleFullsizeChanged:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="207911774"/>
+					</object>
+					<int key="connectionID">232</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">scheduleThumbsChanged:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="58561905"/>
+					</object>
+					<int key="connectionID">233</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1396,13 +1458,56 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA</b
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">226</int>
+			<int key="maxID">233</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">ScheduleViewController</string>
 					<string key="superclassName">NSViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="scheduleFullsizeChanged:">id</string>
+						<string key="scheduleThumbsChanged:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="scheduleFullsizeChanged:">
+							<string key="name">scheduleFullsizeChanged:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="scheduleThumbsChanged:">
+							<string key="name">scheduleThumbsChanged:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="dpScheduleFullsize">NSDatePicker</string>
+						<string key="dpScheduleThumbs">NSDatePicker</string>
+						<string key="scheduleFullsizeRadios">NSMatrix</string>
+						<string key="scheduleThumbsRadios">NSMatrix</string>
+						<string key="whichImagesRadios">NSMatrix</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="dpScheduleFullsize">
+							<string key="name">dpScheduleFullsize</string>
+							<string key="candidateClassName">NSDatePicker</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="dpScheduleThumbs">
+							<string key="name">dpScheduleThumbs</string>
+							<string key="candidateClassName">NSDatePicker</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="scheduleFullsizeRadios">
+							<string key="name">scheduleFullsizeRadios</string>
+							<string key="candidateClassName">NSMatrix</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="scheduleThumbsRadios">
+							<string key="name">scheduleThumbsRadios</string>
+							<string key="candidateClassName">NSMatrix</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="whichImagesRadios">
+							<string key="name">whichImagesRadios</string>
+							<string key="candidateClassName">NSMatrix</string>
+						</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/ScheduleViewController.h</string>
